# Guide

./: LICENCE  README.md  pyproject.toml
src/Guide_LaLu/: __init__.py  guide.py  journey.csv  operation.py
src/Guide_LaLu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
